--- a/index.html
+++ b/index.html
@@ -37,8 +37,14 @@
         <p id="error" style="color: red; display: none;">Incorrect password, try again.</p>
     </div>
     <div class="container" id="content">
-        <h2>Welcome to Your Website</h2>
-        <p>This is the protected content!</p>
+        <div class="container" id="content">
+    <h2>Welcome to Your Website</h2>
+    <p>This is the protected content!</p>
+    <video width="320" height="240" controls>
+        <source src="https://github.com/cillxqq/home/raw/refs/heads/main/ScreenRecording_10-26-2024%2003-26-20_1.MOV" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+</div>
     </div>
     <script>
         function checkPassword() {
