Update index.html [ 4zanie vid. mp4 version ]

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
     <h2>Welcome to Your Website</h2>
     <p>This is the protected content!</p>
     <video width="320" height="240" controls>
-        <source src="https://github.com/cillxqq/home/raw/refs/heads/main/ScreenRecording_10-26-2024%2003-26-20_1.MOV" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
+    <source src="https://raw.githubusercontent.com/cillxqq/home/refs/heads/main/ScreenRecording_10-26-2024%2003-26-20_1%202.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+</video>
 </div>
     </div>
     <script>
