--- a/index.html
+++ b/index.html
@@ -37,13 +37,11 @@
         <p id="error" style="color: red; display: none;">Incorrect password, try again.</p>
     </div>
     <div class="container" id="content">
-        <div class="container" id="content">
     <h2>Welcome to Your Website</h2>
     <p>This is the protected content!</p>
-    <video width="320" height="240" controls>
-    <source src="https://raw.githubusercontent.com/cillxqq/home/refs/heads/main/ScreenRecording_10-26-2024%2003-26-20_1%202.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-</video>
+    <iframe src="https://drive.google.com/file/d/1wSadeNJJ2-bM-YBL7rYEVzxm1I83rD6J/preview" width="640" height="480" allowfullscreen></iframe>
+</div>
+
 </div>
     </div>
     <script>
