Update index.html text changes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Protected Website</title>
+    <title>where it started !</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -31,10 +31,10 @@
 </head>
 <body>
     <div class="container" id="login">
-        <h2>Please Enter the Password</h2>
+        <h2>what's the date of the original occasion bubs ?</h2>
         <input type="password" id="password" placeholder="Enter password" />
         <button onclick="checkPassword()">Submit</button>
-        <p id="error" style="color: red; display: none;">Incorrect password, try again.</p>
+        <p id="error" style="color: red; display: none;">when were you born you bingus .</p>
     </div>
     <div class="container" id="content">
     <h2>found home</h2>
