--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #f4f4f4;
+            background-color: #4B5320;
         }
         #login {
             display: block;
@@ -23,7 +23,7 @@
         .container {
             text-align: center;
             padding: 20px;
-            background: #fff;
+            background: #FFFFFF;
             border-radius: 8px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
         }
