--- a/index.html
+++ b/index.html
@@ -24,6 +24,28 @@
         border-radius: 0; /* Remove rounded corners */
     }
 
+    input[type="password"] {
+        background: #4B5320; /* Military green background */
+        color: #FFFFFF; /* White text */
+        border: 1px solid #FFFFFF; /* White border */
+        padding: 5px;
+        border-radius: 4px;
+        margin-right: 5px;
+    }
+
+    button {
+        background: #4B5320; /* Military green background */
+        color: #FFFFFF; /* White text */
+        border: 1px solid #FFFFFF; /* White border */
+        padding: 5px 10px;
+        border-radius: 4px;
+        cursor: pointer;
+    }
+
+    button:hover {
+        background: #3D4B15; /* Darker green on hover */
+    }
+
     .container {
         text-align: center;
     }
