Update index.html (complete refix of code)

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -58,14 +57,13 @@
         <button onclick="checkPassword()">Submit</button>
         <p id="error" style="color: red; display: none;">when were you born you bingus .</p>
     </div>
-    <div class="container" id="content">
-    <h2>found home</h2>
-    <p>i watch this video a lot , i realized that at that moment i knew i was falling for you . look at the way you looked at me through the screen , you were always so handsome in my eyes . </p>
-    <iframe src="https://drive.google.com/file/d/1wSadeNJJ2-bM-YBL7rYEVzxm1I83rD6J/preview" width="640" height="480" allowfullscreen></iframe>
-</div>
 
-</div>
+    <div class="container" id="content" style="display: none;">
+        <h2>found home</h2>
+        <p>i watch this video a lot , i realized that at that moment i knew i was falling for you . look at the way you looked at me through the screen , you were always so handsome in my eyes . </p>
+        <iframe src="https://drive.google.com/file/d/1wSadeNJJ2-bM-YBL7rYEVzxm1I83rD6J/preview" width="640" height="480" allowfullscreen></iframe>
     </div>
+
     <script>
         function checkPassword() {
             const password = document.getElementById("password").value;
