Update index.html (in depth text [vid4zanie])

--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
 
     <div class="container" id="content" style="display: none;">
         <h2>found home</h2>
-        <p>i watch this video a lot , i realized that at that moment i knew i was falling for you . look at the way you looked at me through the screen , you were always so handsome in my eyes . </p>
+        <p>i watch this video a lot, i realized that at that moment i knew i was falling for you. look at the way you looked at me through the screen, you were always so handsome in my eyes. 
+        your smile, your eyes, the way you subtly rub your thumb on your pillow, your playful nature through our little shared blinks. made me feel all warm and fuzzy that i haven't felt in a long while.
+        it was warm and sweet, i slept nicely that night knowing through just that, you liked me too. </p>
         <iframe src="https://drive.google.com/file/d/1wSadeNJJ2-bM-YBL7rYEVzxm1I83rD6J/preview" width="640" height="480" allowfullscreen></iframe>
     </div>
 
